src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <formula>TEXT(Account.Employment_Status__pc)</formula>
        <inlineHelpText>To edit this field, please go to account page</inlineHelpText>
        <label>Employment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Payment__c</fullName>
        <formula>Net_Payment__c + Car_Admin_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Rate_Expiry__c</fullName>
        <label>Fixed Rate Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Followed_Date__c</fullName>
        <label>Future Followed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT (Account.PersonContact.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT(Account.Industry)</formula>
        <inlineHelpText>To edit this field, please go to account page</inlineHelpText>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Smoker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Smoker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Refinance__c</fullName>
        <label>Last Refinance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadToCallFileRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LeadToCallFileRule</label>
        <referenceTo>LeadToCallFileRule__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manager approved for outside of business rules</description>
        <inlineHelpText>Please @chatter a manager to seek approval for any opportunity outside of business rules</inlineHelpText>
        <label>Manager Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NO_BEX_Amount__c</fullName>
        <label>NO BEX Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_BEX_Annual_Premium__c</fullName>
        <label>NO BEX Annual Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_BEX_Monthly_Premium__c</fullName>
        <label>NO BEX Monthly Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_BEX_Waiting_Period__c</fullName>
        <label>NO BEX Waiting Period</label>
        <picklist>
            <picklistValues>
                <fullName>Day-14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day-30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NO_Comment__c</fullName>
        <label>NO Comment</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NO_IP_Amount__c</fullName>
        <label>NO IP Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_IP_Annual_Premium__c</fullName>
        <label>NO IP Annual Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_IP_Monthly_Premium__c</fullName>
        <label>NO IP Monthly Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_IP_Salary_Conti_For__c</fullName>
        <label>NO IP Salary Conti For</label>
        <picklist>
            <picklistValues>
                <fullName>two years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>age 65</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NO_IP_Waiting_Period__c</fullName>
        <label>NO IP Waiting Period</label>
        <picklist>
            <picklistValues>
                <fullName>30-Day Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-Day Waiting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NO_Life_Amount__c</fullName>
        <label>NO Life Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_Life_Annual_Premium__c</fullName>
        <label>NO Life Annual Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_Life_Monthly_Premium__c</fullName>
        <label>NO Life Monthly Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_Status__c</fullName>
        <label>NO Status</label>
        <picklist>
            <picklistValues>
                <fullName>AFUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DECLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENFCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBFUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QFUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UND1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UND2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NO_TPD_Amount__c</fullName>
        <label>NO TPD Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_TPD_Annual_Premium__c</fullName>
        <label>NO TPD Annual Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_TPD_Monthly_Premium__c</fullName>
        <label>NO TPD Monthly Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_Trauma_Amount__c</fullName>
        <label>NO Trauma Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_Trauma_Annual_Premium__c</fullName>
        <label>NO Trauma Annual Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_Trauma_Monthly_Premium__c</fullName>
        <label>NO Trauma Monthly Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Amount_Financed__c</fullName>
        <description>IF( TEXT(Car_Brokerage_Finance_or_Overs__c) = &quot;Financed&quot;, Car_Asset_Cost__c - Car_Less_Deposit__c + Car_Insurance_Financed__c + Car_Application_Fee__c + Car_Origination_Fee__c + Car_Brokerage__c, Car_Asset_Cost__c - Car_Less_Deposit__c + Car_Insurance_Financed__c + Car_Application_Fee__c + Car_Origination_Fee__c)</description>
        <formula>IF( TEXT(Car_Brokerage_Finance_or_Overs__c) = &quot;Financed&quot;, Car_Asset_Cost__c - Car_Less_Deposit__c + Car_Insurance_Financed__c + Car_Application_Fee__c + Car_Origination_Fee__c + Car_Brokerage__c+ Value(Text(Car_Security_Registration_Fee__c )), Car_Asset_Cost__c - Car_Less_Deposit__c + Car_Insurance_Financed__c + Car_Application_Fee__c + Car_Origination_Fee__c  + Value(Text(Car_Security_Registration_Fee__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Assets__c</fullName>
        <formula>Asset_Liability_Statement__r.Net_Assets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Expenses_All_Applicants__c</fullName>
        <formula>Asset_Liability_Statement__r.Total_Monthly_Expenses__c + VALUE(TEXT(Asset_Liability_Statement__r.AL_Statement_Owner__r.HPI_LE_Dependants__pc)) + IF( TEXT(Asset_Liability_Statement__r.AL_Statement_Owner__r.Marital_Status__pc) = &quot;Single&quot; || TEXT(Asset_Liability_Statement__r.AL_Statement_Owner__r.Marital_Status__pc) = &quot;Divorced/Separated&quot; || TEXT(Asset_Liability_Statement__r.AL_Statement_Owner__r.Marital_Status__pc) = &quot;Widow/Widower&quot;, 1250, 1817) + Asset_Liability_Statement__r.AL_Statement_Owner__r.Other_Living_Expenses__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Expenses (All Applicants)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Income_All_Applicants__c</fullName>
        <formula>(Asset_Liability_Statement__r.A_L_Statement_Joint_With__r.Net_Other_Weekly_Income__pc + Asset_Liability_Statement__r.A_L_Statement_Joint_With__r.Net_Weekly_Income__pc + Asset_Liability_Statement__r.AL_Statement_Owner__r.Net_Other_Weekly_Income__pc + Asset_Liability_Statement__r.AL_Statement_Owner__r.Net_Weekly_Income__pc) * 52 / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Income (All Applicants)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Payment__c</fullName>
        <formula>(( Net_Amount_Financed__c - Car_Balloon__c ) * Car_Interest_Rate_Cust__c / 12) / (1 - (1 + Car_Interest_Rate_Cust__c / 12) ^ ( - VALUE(TEXT( Car_Term__c )) )) + Car_Balloon__c * Car_Interest_Rate_Cust__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Noble_Url__c</fullName>
        <label>Noble Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number_of_Appointments__c</fullName>
        <label>Number of Appointments</label>
        <summaryForeignKey>Appointment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Occupation_category__c</fullName>
        <label>Occupation category</label>
        <picklist>
            <picklistValues>
                <fullName>Heavy Blue Collar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Blue Collar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Blue Collar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Collar</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>White Collar Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outside_of_Business_Rules__c</fullName>
        <formula>IF(AND(TEXT(Transaction_Type__c) = &quot;Refinance&quot;, OR(Current_Loan_Value__c &lt; 200000, Current_Interest_Rate__c &lt;0.047, TEXT(Current_Interest_Rate_Type__c) = &quot;&quot;)) = TRUE, &quot;Outside of Business Rules&quot;, IF(AND(TEXT(Transaction_Type__c) = &quot;New Purchase&quot;, Current_Loan_Value__c &lt; 200000) = TRUE, &quot;Outside of Business Rules&quot;, &quot;Within Business Rules&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outside of Business Rules</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Income__c</fullName>
        <formula>Account.Partner_Annual_Income__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To edit this field, please go to account page</inlineHelpText>
        <label>Partner Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Loan_Balance__c</fullName>
        <label>Personal Loan Balance</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_conversion_opp__c</fullName>
        <formula>IF(LastModifiedDate &gt;  CreatedDate, &quot;Post Conversion&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post conversion opp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Notes__c</fullName>
        <label>Pre Sales Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>TEXT(acfProduct_LVR__r.acfProduct__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Repayments__c</fullName>
        <formula>Finance_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Repayments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Appointment_Date__c</fullName>
        <label>Second Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Info_To_Nobleoak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Info To Nobleoak</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Change_Date__c</fullName>
        <label>Stage Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty__c</fullName>
        <formula>IF( Account.BillingState = &quot;New South Wales&quot;, IF( Net_Amount_Financed__c &gt; 16000, (5 + (ROUND((Net_Amount_Financed__c - 16000) / 1000,0) * 4)) , 5), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stamp Duty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account.BillingState</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Account.BillingStreet</formula>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Allocated__c</fullName>
        <label>Total Allocated</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>Allocated</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Assets__c</fullName>
        <formula>Asset_Liability_Statement__r.Total_Assets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cancelled__c</fullName>
        <label>Total Cancelled</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Held__c</fullName>
        <label>Total Held</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>Appointment Held</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Liabilities__c</fullName>
        <formula>Asset_Liability_Statement__r.Total_Liabilities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Expenses__c</fullName>
        <formula>Asset_Liability_Statement__r.Total_Monthly_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_New__c</fullName>
        <label>Total New</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_Show__c</fullName>
        <label>Total No Show</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>No Show</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rescheduled__c</fullName>
        <label>Total Rescheduled</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>Rescheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Refinance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Build_Year__c</fullName>
        <label>Vehicle Build Year</label>
        <picklist>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Price__c</fullName>
        <label>Vehicle Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfAddRepayments__c</fullName>
        <description>Click Loans</description>
        <formula>acfProduct_LVR__r.acfProduct__r.acfAdd_Repayments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Repayments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfAdd_Repayments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Add Repayments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfApproval_Conditions__c</fullName>
        <description>Click Loans</description>
        <label>Approval Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acfBankNameForAccountDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Bank Name For Account Details</label>
        <referenceTo>acfBank_Detail__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfBankdetailStatus__c</fullName>
        <description>Click Loans</description>
        <label>BankdetailStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Skipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfComparison_Rate__c</fullName>
        <description>Click Loans</description>
        <label>Comparison Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfConditions_of_Approval__c</fullName>
        <description>Click Loans</description>
        <label>Conditions of Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text and Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfCurrentLoanAmount__c</fullName>
        <description>Click Loans</description>
        <formula>Account.PersonContact.acfCurrent_Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentLoanAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfCurrent_Interest_Rate_Type__c</fullName>
        <description>Click Loans</description>
        <formula>Account.PersonContact.acfWhat_is_your_current_payment_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Interest Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfCurrent_Lender__c</fullName>
        <description>Click Loans</description>
        <formula>Account.PersonContact.ACF_BankName__c</formula>
        <label>Current Lender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfCuurent_Rate__c</fullName>
        <description>Click Loans</description>
        <formula>Account.PersonContact.acfCurrent_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfDate_Conditionally_Approved__c</fullName>
        <description>Click Loans</description>
        <label>Date Conditionally Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acfDate_Docs_Generated__c</fullName>
        <description>Click Loans</description>
        <label>Date Docs Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acfDate_Formally_Approved__c</fullName>
        <description>Click Loans</description>
        <label>Date Formally Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acfDate_of_Birth__c</fullName>
        <description>Click Loans</description>
        <label>Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDebitCard__c</fullName>
        <description>Click Loans</description>
        <formula>acfProduct_LVR__r.acfProduct__r.acfDebit_Card__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfDebit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Debit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfEstimated_Savings__c</fullName>
        <description>Click Loans</description>
        <label>Estimated Savings/Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfExpected_Settlement_Date__c</fullName>
        <description>Click Loans</description>
        <label>Expected Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acfExpiry_Date__c</fullName>
        <description>Click Loans</description>
        <label>Expiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfID_Number__c</fullName>
        <description>Click Loans</description>
        <label>ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfID_Type__c</fullName>
        <description>Click Loans</description>
        <label>ID Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfInterestOnly__c</fullName>
        <description>Click Loans</description>
        <formula>acfProduct_LVR__r.acfProduct__r.acfInterest_Only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfInterest_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Interest Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_Identity_Document_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Identity Document Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_Identity_Document_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Identity Document Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIssuing_Country__c</fullName>
        <description>Click Loans</description>
        <label>Issuing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfLVR_Id__c</fullName>
        <description>Click Loans</description>
        <label>LVR Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfLegal_Fees__c</fullName>
        <description>Click Loans</description>
        <label>Legal Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfMultipleSplits__c</fullName>
        <description>Click Loans</description>
        <formula>acfProduct_LVR__r.acfProduct__r.acfMultiple_Splits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiple Splits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfMultiple_Splits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Multiple Splits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfOffset_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Offset Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfOngoing_Fees__c</fullName>
        <description>Click Loans</description>
        <label>Ongoing Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfPayment_Type__c</fullName>
        <description>Click Loans</description>
        <formula>Account.PersonContact.acfWhat_is_your_current_payment_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfProduct_LVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Product LVR</label>
        <referenceTo>LVR_Rate__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfReason_for_Rejection__c</fullName>
        <description>Click Loans</description>
        <label>Reason for Rejection</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfRedraw__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Redraw</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfStatus__c</fullName>
        <description>Click Loans</description>
        <label>Jumio Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfTenure__c</fullName>
        <description>Click Loans</description>
        <label>Tenure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>